# Chat-Bot-Prototype

./: .env.example  .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
chat_bot/: __init__.py
chat_bot/agent/: __init__.py  agent.py
chat_bot/cli/: __init__.py  main.py
chat_bot/config/: settings.py
chat_bot/providers/: base.py  gemini.py  ollama.py
specs/001-pytest-unit-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pytest-unit-tests/checklists/: requirements.md
specs/001-pytest-unit-tests/contracts/: test-contracts.md
specs/002-mcp-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mcp-tools/checklists/: requirements.md
specs/002-mcp-tools/contracts/: agent-api.md  settings-api.md
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_config.py  test_providers_base.py  test_providers_gemini.py  test_providers_ollama.py
